# cpp-template

./: CMakeLists.txt  LICENSE.md  README.md  cookiecutter.json
cmake/: base.cmake  conan.cmake  project_options.cmake  warnings.cmake
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md
{{cookiecutter.project_slug}}/cmake/: base.cmake  cache.cmake  ccache.cmake  compilers.cmake  conan.cmake  project_options.cmake  sanitizers.cmake  static_analyzers.cmake  warnings.cmake
{{cookiecutter.project_slug}}/src/: CMakeLists.txt
